@@ -1,0 +1,17 @@
+<?php
+/**
+ * ACL *negative* rights for a mailbox (see RFC 2086/4314 [2]).
+ *
+ * Copyright 2011 The Horde Project (http://www.horde.org/)
+ *
+ * See the enclosed file COPYING for license information (LGPL). If you
+ * did not receive this file, see http://www.fsf.org/copyleft/lgpl.html.
+ *
+ * @author   Michael Slusarz <slusarz@horde.org>
+ * @category Horde
+ * @license  http://www.fsf.org/copyleft/lgpl.html LGPL
+ * @package  Imap_Client
+ */
+class Horde_Imap_Client_Data_AclNegative extends Horde_Imap_Client_Data_Acl
+{
+}
